--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@neynar/nodejs-sdk": "^2.0.3",
+    "frames.js": "^0.20.0",
     "next": "14.2.10",
     "react": "^18",
     "react-dom": "^18",
